<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.chua</groupId>
        <artifactId>spring-support-parent-starter</artifactId>
        <version>4.0.0.37</version>
    </parent>
    <artifactId>spring-support-sync-data-starter</artifactId>
    <name>Archetype - spring-support-sync-data-starter</name>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Spring Support Common Starter - 日志工具 -->
        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-common-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-swagger-starter</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-mybatis-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-socket-io-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-job-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-sync-starter</artifactId>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <release>25</release>
                    <encoding>UTF-8</encoding>
                    <useIncrementalCompilation>true</useIncrementalCompilation>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-J--enable-native-access=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>

                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
